# switchboard-plug-useraccounts

./: .bzrignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYRIGHT  HACKING  INSTALL  README.md  meson.build
.github/workflows/: main.yml
cli/: GuestSessionToggle.vala  meson.build
data/: icons.gresource.xml  meson.build  my-plug.plug  org.pantheon.user-accounts.administration.policy.cmake  pantheon-plug-useraccounts.desktop  useraccounts.appdata.xml.in  useraccounts.metainfo.xml.in  useraccounts.policy.in.in
debian/: changelog  control  copyright  rules
debian/patches/: revert-r181-granite-avatar-widget.patch  series  temporary-version-bump-0.1.2.1.patch
lib/: meson.build
po/: CMakeLists.txt  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  br.po  bs.po  btk.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dz.po  ee.po  el.po  (+127 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+159 more)
src/: CMakeLists.txt  Loader.vala  ObscurityTest.vala  PasswdWrapper.vala  PasswordUtils.vala  Plug.vala  UserUtils.vala  Utils.vala  config.vala  config.vala.in  meson.build  run-passwd.c  run-passwd.vapi  wallpapers-plug.vala  wallpapers-settings.vala
src/Dialogs/: AvatarDialog.vala  ChangePasswordDialog.vala  FingerprintDialog.vala  NewUserDialog.vala  PasswordDialog.vala
src/Misc/: DeltaUser.vala  FPUtils.vala  InfobarNotifier.vala  ObscurityChecker.vala  ObscurityTest.vala  PasswdErrorNotifier.vala  UserUtils.vala  Utils.vala
src/Views/: GuestSettingsView.vala  MainView.vala  UserSettingsView.vala
src/Widgets/: CropView.vala  ErrorRevealer.vala  GuestSettings.vala  GuestSettingsView.vala  ListFooter.vala  MainView.vala  NewUserPopover.vala  PasswordEditor.vala  PasswordPopover.vala  UserItem.vala  UserList.vala  UserListBox.vala  UserSettings.vala  UserSettingsView.vala  UserView.vala
src/Widgets/Dialogs/: AvatarDialog.vala
src/Widgets/Popovers/: AvatarPopover.vala  NewUserPopover.vala  PasswordPopover.vala
vapi/: accountsservice.vapi  run-passwd.vapi
